# grb-simulations

./: README.md  pyproject.toml
cosiburstpy/: __init__.py  cli.py
cosiburstpy/fermigbm/: create_lightcurve.py  data_download.py
cosiburstpy/megalib/: read_sim_file.py  run_megalib.py
cosiburstpy/simulations/: acs_data.py
